--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@
     --hero-bg-gradient: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7));
     --customers-icon-color: #8E8F99;
     --footer-icon-hover-color: #31D0AA;
+    --transition-durartion-timing: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }   
 
 li {
@@ -133,6 +134,7 @@ body {
     color: var(--main-text-color);
     letter-spacing: 0.02em;
     line-height: 1.5;
+    transition: color var(--transition-durartion-timing);
 }
 
 .header-menu-list{
@@ -159,6 +161,7 @@ body {
 
 .info-link {
     color: var(--secondary-text-color);
+    transition: color var(--transition-durartion-timing);
 }
 
 .info-link:hover,
@@ -207,12 +210,13 @@ body {
     border: none;
     padding: 0;
     margin: 0 auto;
+    transition: background-color var(--transition-durartion-timing);
 }
 
 .hero-order-btn:hover,
 .hero-order-btn:focus {
     background-color: var(--hover-color);
-    cursor: pointer;
+    
 }
 /* =======PRODUCTIVITY====== */
 .productivity-list{
@@ -294,6 +298,7 @@ body {
     background-color: var(--logo-btn-color);
     align-items: center;
     justify-content: center;
+    transition: background-color var(--transition-durartion-timing);
 }
 
 .team .soc-icon-link:hover,
@@ -314,10 +319,10 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: border-color var(--transition-durartion-timing),  fill var(--transition-durartion-timing);
 }
 .customers-icon{
     fill: var(--customers-icon-color);
-  
 }
 
 .customers-icon-link:hover, 
@@ -381,6 +386,7 @@ body {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     padding: 12px 24px;
+    transition: background-color var(--transition-durartion-timing), color var(--transition-durartion-timing), box-shadow var(--transition-durartion-timing), border-color var(--transition-durartion-timing);
 }
 .filter-list{
     margin-bottom: 72px;
@@ -391,7 +397,6 @@ body {
 .filter-btn:hover,
 .filter-btn:focus {
     background-color: var(--hover-color);
-    cursor: pointer;
     color: var(--background-title-btn-color);
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border-color: var(--hover-color);
@@ -411,6 +416,8 @@ body {
     border: 1px solid #E7E9FC;
     margin-right: 21px;
     margin-bottom: 48px;
+    transition: box-shadow var(--transition-durartion-timing);
+    
 }
 
 .portfolio-item:nth-child(3n + 3){
@@ -427,4 +434,28 @@ body {
 .portfolio-item:hover,
 .portfolio-item:focus{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-item:hover .portfolio-cover-text,
+.portfolio-item:focus .portfolio-cover-text{
+    transform: translate(0);
+}
+.portfolio-cover-wrap{
+    position: relative;
+    overflow: hidden;
+}
+.portfolio-cover-text{
+    position: absolute;
+    top: 0;
+    font-family: var(--main-font);
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--team-filter-footer-background);
+    background-color: var(--logo-btn-color);
+    padding: 40px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform var(--transition-durartion-timing);
+    overflow: auto;
 }
