--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
     --customers-icon-color: #8E8F99;
     --footer-icon-hover-color: #31D0AA;
     --transition-durartion-timing: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    --modal-bg-color: #FCFCFC;
 }   
 
 li {
@@ -50,6 +51,9 @@ img{
     display: block;
 }
 
+.no-scroll{
+    overflow: hidden;
+}
 .container{
     width: 1158px;
     padding-right: 15px;
@@ -168,7 +172,19 @@ body {
 .info-link:focus {
     color: var(--hover-color);
 }
-
+.active{
+    position: relative;
+}
+.active::after{
+    content: '';
+    width: 100%;
+    height: 4px;
+    background-color: var(--hover-color);
+    border-radius: 2px; 
+    position: absolute;
+    left: 0;
+    bottom: -29px;
+}
 /* ======= CONTACTS ======= */
 
 /* ======= HERO ======= */
@@ -370,6 +386,47 @@ body {
     background-color: var(--footer-icon-hover-color);
 }
 /* ======= /FOOTER ======= */
+/* ========MODAL========== */
+.backdrop{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opasity var(--transition-durartion-timing), visibility var(--transition-durartion-timing);
+}
+.modal{
+    width: 408px;
+    min-height: 576px;
+    background: var(--modal-bg-color);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(0);
+    transition: transform var(--transition-durartion-timing);
+    padding: 24px;
+}
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) rotate(-360deg);
+}
+.close-btn{
+    width: 24px;
+    height: 24px;
+    background: #E7E9FC;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: auto;
+}
+.is-hidden{
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
 /* ========PORTFOLIO====== */
 .filter{
     padding-top: 96px;
